crates/idl-ts/tests/snapshots/snapshot_xcdr2_vectors__snapshot_v10_mutable.snap
---
source: crates/idl-ts/tests/snapshot_xcdr2_vectors.rs
expression: "gen_ts(\"@mutable struct M { @id(1) long a; @id(2) string b; };\")"
---
// Generated by zerodds idl-ts. Do not edit.

import type {
    Char, WChar, LongDouble,
    DdsAny, DdsException,
    DdsTypeDescriptor, DdsMemberDescriptor, DdsTypeRef,
    ServiceDescriptor, OperationDescriptor,
    OperationParameterDescriptor, AttributeDescriptor, ParameterMode,
} from "@zerodds/types";
import {
    registerType, makeChar, makeWChar, makeLongDouble,
} from "@zerodds/types";
import type {
    DdsTopicType, EndianMode,
} from "@zerodds/cdr";
import {
    Xcdr2Writer, Xcdr2Reader, md5,
} from "@zerodds/cdr";

export interface M {
    /**
     * @dds-id 1
     */
    a: number;
    /**
     * @dds-id 2
     */
    b: string;
}

export function isM(v: unknown): v is M {
    if (typeof v !== "object" || v === null) return false;
    const o = v as Record<string, unknown>;
    if (typeof o.a !== "number") return false;
    if (typeof o.b !== "string") return false;
    return true;
}

export const MType: DdsTypeDescriptor<M> = {
    kind: "struct",
    name: "M",
    extensibility: "mutable",
    nested: false,
    fields: [
        {
            name: "a",
            id: 1,
            type: { kind: "primitive", name: "int32" },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
        {
            name: "b",
            id: 2,
            type: { kind: "string", wide: false },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
    ],
    typeGuard: isM,
};
registerType(MType);

export const MTypeSupport: DdsTopicType<M> = {
    typeName: "M",
    isKeyed: false,
    extensibility: "mutable",
    encode(s: M, endian: EndianMode = "le"): Uint8Array {
        const w = new Xcdr2Writer(endian);
        const _tok = w.beginMutable();
        w.writeEmHeader(1, 2, false);
        w.writeInt32(s.a);
        {
            w.writeEmHeader(2, 3, false, 0);
            const _bodyStart = w.pos;
            w.writeString(s.b);
            w.patchUint32(_bodyStart - 4, w.pos - _bodyStart);
        }
        w.endMutable(_tok);
        return w.toBytes();
    },
    decode(bytes: Uint8Array, offset = 0, length: number = bytes.length - offset): M {
        const r = new Xcdr2Reader(bytes, offset, length, "le");
        let _f_a: number | undefined = 0;
        let _f_b: string | undefined = "";
        const _tok = r.beginMutable();
        while (r.pos < _tok.bodyEnd) {
            const _emh = r.readEmHeader();
            switch (_emh.memberId) {
                case 1: {
                    const _v: number = r.readInt32();
                    _f_a = _v;
                    break;
                }
                case 2: {
                    if (_emh.lc === 3) { r.readUint32(); }
                    const _v: string = r.readString();
                    _f_b = _v;
                    break;
                }
                default: {
                    // Skip unknown member per XTypes §7.4.2.
                    if (_emh.nextInt !== null) { r.readBytes(_emh.nextInt); }
                    else { const _sz = Xcdr2Reader.lcInlineSize(_emh.lc); if (_sz > 0) r.readBytes(_sz); }
                    break;
                }
            }
        }
        r.endMutable(_tok);
        return {
            a: _f_a as number,
            b: _f_b as string,
        };
    },
    keyHash(s: M): Uint8Array {
        return new Uint8Array(16);
    },
};
