crates/idl-ts/tests/snapshots/snapshot_xcdr2_vectors__snapshot_v11_optional_member_mutable.snap
---
source: crates/idl-ts/tests/snapshot_xcdr2_vectors.rs
expression: "gen_ts(\"@mutable struct O { @id(1) @optional long maybe; };\")"
---
// Generated by zerodds idl-ts. Do not edit.

import type {
    Char, WChar, LongDouble,
    DdsAny, DdsException,
    DdsTypeDescriptor, DdsMemberDescriptor, DdsTypeRef,
    ServiceDescriptor, OperationDescriptor,
    OperationParameterDescriptor, AttributeDescriptor, ParameterMode,
} from "@zerodds/types";
import {
    registerType, makeChar, makeWChar, makeLongDouble,
} from "@zerodds/types";
import type {
    DdsTopicType, EndianMode,
} from "@zerodds/cdr";
import {
    Xcdr2Writer, Xcdr2Reader, md5,
} from "@zerodds/cdr";

export interface O {
    /**
     * @dds-id 1
     */
    maybe?: number | undefined;
}

export function isO(v: unknown): v is O {
    if (typeof v !== "object" || v === null) return false;
    const o = v as Record<string, unknown>;
    return true;
}

export const OType: DdsTypeDescriptor<O> = {
    kind: "struct",
    name: "O",
    extensibility: "mutable",
    nested: false,
    fields: [
        {
            name: "maybe",
            id: 1,
            type: { kind: "primitive", name: "int32" },
            key: false,
            optional: true,
            mustUnderstand: false,
        },
    ],
    typeGuard: isO,
};
registerType(OType);

export const OTypeSupport: DdsTopicType<O> = {
    typeName: "O",
    isKeyed: false,
    extensibility: "mutable",
    encodeInto(w: Xcdr2Writer, s: O): void {
        if (w.isXcdr1) {
        const _plOuter = w;
        if (s.maybe !== undefined && s.maybe !== null) {
        {
            const _sub = new Xcdr2Writer(_plOuter.endian, 8);
            { const w = _sub;
                w.writeInt32(s.maybe);
            }
            _plOuter.writePlCdr1Member(1, _sub.toBytes());
        }
        }
        _plOuter.writePlCdr1Sentinel();
        } else {
        const _tok = w.beginMutable();
        if (s.maybe !== undefined && s.maybe !== null) {
            {
                w.writeEmHeader(1, 4, false, 0);
                const _bodyStart = w.pos;
                w.pushAlignmentOrigin();
                w.writeInt32(s.maybe);
                w.popAlignmentOrigin();
                w.patchUint32(_bodyStart - 4, w.pos - _bodyStart);
            }
        }
        w.endMutable(_tok);
        }
    },
    encode(s: O, endian: EndianMode = "le", representation = 1): Uint8Array {
        const w = new Xcdr2Writer(endian, representation === 0 ? 8 : 4);
        this.encodeInto(w, s);
        return w.toBytes();
    },
    decodeFrom(r: Xcdr2Reader): O {
        let _f_maybe: number | undefined = undefined;
        if (r.isXcdr1) {
            let _plm: { memberId: number; bodyEnd: number } | null;
            while ((_plm = r.beginPlCdr1Member()) !== null) {
                switch (_plm.memberId) {
                case 1: {
                    const _v: number = r.readInt32();
                    _f_maybe = _v;
                    break;
                }
                default: break;
                }
                r.endPlCdr1Member(_plm);
            }
        } else {
        const _tok = r.beginMutable();
        while (r.pos < _tok.bodyEnd) {
            const _emh = r.readEmHeader();
            switch (_emh.memberId) {
                case 1: {
                    const _v: number = r.readInt32();
                    _f_maybe = _v;
                    break;
                }
                default: {
                    // Skip unknown member per XTypes §7.4.2.
                    if (_emh.nextInt !== null) { r.readBytes(_emh.nextInt); }
                    else if (_emh.lc >= 5) { const _len = r.readUint32(); r.readBytes(_len); }
                    else { const _sz = Xcdr2Reader.lcInlineSize(_emh.lc); if (_sz > 0) r.readBytes(_sz); }
                    break;
                }
            }
        }
        r.endMutable(_tok);
        }
        return {
            maybe: _f_maybe,
        };
    },
    decode(bytes: Uint8Array, offset = 0, length: number = bytes.length - offset, endian: EndianMode = "le", representation = 1): O {
        const r = new Xcdr2Reader(bytes, offset, length, endian, representation === 0 ? 8 : 4);
        return this.decodeFrom(r);
    },
    keyHash(s: O): Uint8Array {
        return new Uint8Array(16);
    },
};
