crates/idl-ts/tests/snapshots/snapshot_xcdr2_vectors__snapshot_v1_empty_final.snap
---
source: crates/idl-ts/tests/snapshot_xcdr2_vectors.rs
expression: "gen_ts(\"@final struct Empty {};\")"
---
// Generated by zerodds idl-ts. Do not edit.

import type {
    Char, WChar, LongDouble,
    DdsAny, DdsException,
    DdsTypeDescriptor, DdsMemberDescriptor, DdsTypeRef,
    ServiceDescriptor, OperationDescriptor,
    OperationParameterDescriptor, AttributeDescriptor, ParameterMode,
} from "@zerodds/types";
import {
    registerType, makeChar, makeWChar, makeLongDouble,
} from "@zerodds/types";
import type {
    DdsTopicType, EndianMode,
} from "@zerodds/cdr";
import {
    Xcdr2Writer, Xcdr2Reader, md5,
} from "@zerodds/cdr";

export interface Empty {
}

export function isEmpty(v: unknown): v is Empty {
    if (typeof v !== "object" || v === null) return false;
    const o = v as Record<string, unknown>;
    return true;
}

export const EmptyType: DdsTypeDescriptor<Empty> = {
    kind: "struct",
    name: "Empty",
    extensibility: "final",
    nested: false,
    fields: [
    ],
    typeGuard: isEmpty,
};
registerType(EmptyType);

export const EmptyTypeSupport: DdsTopicType<Empty> = {
    typeName: "Empty",
    isKeyed: false,
    extensibility: "final",
    encodeInto(w: Xcdr2Writer, s: Empty): void {
    },
    encode(s: Empty, endian: EndianMode = "le"): Uint8Array {
        const w = new Xcdr2Writer(endian);
        this.encodeInto(w, s);
        return w.toBytes();
    },
    decodeFrom(r: Xcdr2Reader): Empty {
        return {
        };
    },
    decode(bytes: Uint8Array, offset = 0, length: number = bytes.length - offset): Empty {
        const r = new Xcdr2Reader(bytes, offset, length, "le");
        return this.decodeFrom(r);
    },
    keyHash(s: Empty): Uint8Array {
        return new Uint8Array(16);
    },
};
