crates/idl-ts/tests/snapshots/snapshot_xcdr2_vectors__snapshot_v2_plain_primitives_final.snap
---
source: crates/idl-ts/tests/snapshot_xcdr2_vectors.rs
expression: "gen_ts(\"@final struct Point { long x; long y; };\")"
---
// Generated by zerodds idl-ts. Do not edit.

import type {
    Char, WChar, LongDouble,
    DdsAny, DdsException,
    DdsTypeDescriptor, DdsMemberDescriptor, DdsTypeRef,
    ServiceDescriptor, OperationDescriptor,
    OperationParameterDescriptor, AttributeDescriptor, ParameterMode,
} from "@zerodds/types";
import {
    registerType, makeChar, makeWChar, makeLongDouble,
} from "@zerodds/types";
import type {
    DdsTopicType, EndianMode,
} from "@zerodds/cdr";
import {
    Xcdr2Writer, Xcdr2Reader, md5,
} from "@zerodds/cdr";

export interface Point {
    x: number;
    y: number;
}

export function isPoint(v: unknown): v is Point {
    if (typeof v !== "object" || v === null) return false;
    const o = v as Record<string, unknown>;
    if (typeof o.x !== "number") return false;
    if (typeof o.y !== "number") return false;
    return true;
}

export const PointType: DdsTypeDescriptor<Point> = {
    kind: "struct",
    name: "Point",
    extensibility: "final",
    nested: false,
    fields: [
        {
            name: "x",
            id: 0,
            type: { kind: "primitive", name: "int32" },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
        {
            name: "y",
            id: 1,
            type: { kind: "primitive", name: "int32" },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
    ],
    typeGuard: isPoint,
};
registerType(PointType);

export const PointTypeSupport: DdsTopicType<Point> = {
    typeName: "Point",
    isKeyed: false,
    extensibility: "final",
    encode(s: Point, endian: EndianMode = "le"): Uint8Array {
        const w = new Xcdr2Writer(endian);
        w.writeInt32(s.x);
        w.writeInt32(s.y);
        return w.toBytes();
    },
    decode(bytes: Uint8Array, offset = 0, length: number = bytes.length - offset): Point {
        const r = new Xcdr2Reader(bytes, offset, length, "le");
        const _f_x: number = r.readInt32();
        const _f_y: number = r.readInt32();
        return {
            x: _f_x,
            y: _f_y,
        };
    },
    keyHash(s: Point): Uint8Array {
        return new Uint8Array(16);
    },
};
