crates/idl-ts/tests/snapshots/snapshot_xcdr2_vectors__snapshot_v3_mixed_primitives_final.snap
---
source: crates/idl-ts/tests/snapshot_xcdr2_vectors.rs
expression: "gen_ts(\"@final struct All {\\n\\\n         boolean b; octet o; short s; unsigned short us;\\n\\\n         long l; unsigned long ul; long long ll; unsigned long long ull;\\n\\\n         float f; double d; };\")"
---
// Generated by zerodds idl-ts. Do not edit.

import type {
    Char, WChar, LongDouble,
    DdsAny, DdsException,
    DdsTypeDescriptor, DdsMemberDescriptor, DdsTypeRef,
    ServiceDescriptor, OperationDescriptor,
    OperationParameterDescriptor, AttributeDescriptor, ParameterMode,
} from "@zerodds/types";
import {
    registerType, makeChar, makeWChar, makeLongDouble,
} from "@zerodds/types";
import type {
    DdsTopicType, EndianMode,
} from "@zerodds/cdr";
import {
    Xcdr2Writer, Xcdr2Reader, md5,
} from "@zerodds/cdr";

export interface All {
    b: boolean;
    o: number;
    s: number;
    us: number;
    l: number;
    ul: number;
    ll: bigint;
    ull: bigint;
    f: number;
    d: number;
}

export function isAll(v: unknown): v is All {
    if (typeof v !== "object" || v === null) return false;
    const o = v as Record<string, unknown>;
    if (typeof o.b !== "boolean") return false;
    if (typeof o.o !== "number") return false;
    if (typeof o.s !== "number") return false;
    if (typeof o.us !== "number") return false;
    if (typeof o.l !== "number") return false;
    if (typeof o.ul !== "number") return false;
    if (typeof o.ll !== "bigint") return false;
    if (typeof o.ull !== "bigint") return false;
    if (typeof o.f !== "number") return false;
    if (typeof o.d !== "number") return false;
    return true;
}

export const AllType: DdsTypeDescriptor<All> = {
    kind: "struct",
    name: "All",
    extensibility: "final",
    nested: false,
    fields: [
        {
            name: "b",
            id: 0,
            type: { kind: "primitive", name: "boolean" },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
        {
            name: "o",
            id: 1,
            type: { kind: "primitive", name: "octet" },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
        {
            name: "s",
            id: 2,
            type: { kind: "primitive", name: "int16" },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
        {
            name: "us",
            id: 3,
            type: { kind: "primitive", name: "uint16" },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
        {
            name: "l",
            id: 4,
            type: { kind: "primitive", name: "int32" },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
        {
            name: "ul",
            id: 5,
            type: { kind: "primitive", name: "uint32" },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
        {
            name: "ll",
            id: 6,
            type: { kind: "primitive", name: "int64" },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
        {
            name: "ull",
            id: 7,
            type: { kind: "primitive", name: "uint64" },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
        {
            name: "f",
            id: 8,
            type: { kind: "primitive", name: "float" },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
        {
            name: "d",
            id: 9,
            type: { kind: "primitive", name: "double" },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
    ],
    typeGuard: isAll,
};
registerType(AllType);

export const AllTypeSupport: DdsTopicType<All> = {
    typeName: "All",
    isKeyed: false,
    extensibility: "final",
    encodeInto(w: Xcdr2Writer, s: All): void {
        w.writeBool(s.b);
        w.writeOctet(s.o);
        w.writeInt16(s.s);
        w.writeUint16(s.us);
        w.writeInt32(s.l);
        w.writeUint32(s.ul);
        w.writeInt64(s.ll);
        w.writeUint64(s.ull);
        w.writeFloat32(s.f);
        w.writeFloat64(s.d);
    },
    encode(s: All, endian: EndianMode = "le"): Uint8Array {
        const w = new Xcdr2Writer(endian);
        this.encodeInto(w, s);
        return w.toBytes();
    },
    decodeFrom(r: Xcdr2Reader): All {
        const _f_b: boolean = r.readBool();
        const _f_o: number = r.readOctet();
        const _f_s: number = r.readInt16();
        const _f_us: number = r.readUint16();
        const _f_l: number = r.readInt32();
        const _f_ul: number = r.readUint32();
        const _f_ll: bigint = r.readInt64();
        const _f_ull: bigint = r.readUint64();
        const _f_f: number = r.readFloat32();
        const _f_d: number = r.readFloat64();
        return {
            b: _f_b,
            o: _f_o,
            s: _f_s,
            us: _f_us,
            l: _f_l,
            ul: _f_ul,
            ll: _f_ll,
            ull: _f_ull,
            f: _f_f,
            d: _f_d,
        };
    },
    decode(bytes: Uint8Array, offset = 0, length: number = bytes.length - offset): All {
        const r = new Xcdr2Reader(bytes, offset, length, "le");
        return this.decodeFrom(r);
    },
    keyHash(s: All): Uint8Array {
        return new Uint8Array(16);
    },
};
