crates/idl-ts/tests/snapshots/snapshot_xcdr2_vectors__snapshot_v4_string_final.snap
---
source: crates/idl-ts/tests/snapshot_xcdr2_vectors.rs
expression: "gen_ts(\"@final struct Greeting { string text; };\")"
---
// Generated by zerodds idl-ts. Do not edit.

import type {
    Char, WChar, LongDouble,
    DdsAny, DdsException,
    DdsTypeDescriptor, DdsMemberDescriptor, DdsTypeRef,
    ServiceDescriptor, OperationDescriptor,
    OperationParameterDescriptor, AttributeDescriptor, ParameterMode,
} from "@zerodds/types";
import {
    registerType, makeChar, makeWChar, makeLongDouble,
} from "@zerodds/types";
import type {
    DdsTopicType, EndianMode,
} from "@zerodds/cdr";
import {
    Xcdr2Writer, Xcdr2Reader, md5,
} from "@zerodds/cdr";

export interface Greeting {
    text: string;
}

export function isGreeting(v: unknown): v is Greeting {
    if (typeof v !== "object" || v === null) return false;
    const o = v as Record<string, unknown>;
    if (typeof o.text !== "string") return false;
    return true;
}

export const GreetingType: DdsTypeDescriptor<Greeting> = {
    kind: "struct",
    name: "Greeting",
    extensibility: "final",
    nested: false,
    fields: [
        {
            name: "text",
            id: 0,
            type: { kind: "string", wide: false },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
    ],
    typeGuard: isGreeting,
};
registerType(GreetingType);

export const GreetingTypeSupport: DdsTopicType<Greeting> = {
    typeName: "Greeting",
    isKeyed: false,
    extensibility: "final",
    encodeInto(w: Xcdr2Writer, s: Greeting): void {
        w.writeString(s.text);
    },
    encode(s: Greeting, endian: EndianMode = "le", representation = 1): Uint8Array {
        const w = new Xcdr2Writer(endian, representation === 0 ? 8 : 4);
        this.encodeInto(w, s);
        return w.toBytes();
    },
    decodeFrom(r: Xcdr2Reader): Greeting {
        const _f_text: string = r.readString();
        return {
            text: _f_text,
        };
    },
    decode(bytes: Uint8Array, offset = 0, length: number = bytes.length - offset, endian: EndianMode = "le", representation = 1): Greeting {
        const r = new Xcdr2Reader(bytes, offset, length, endian, representation === 0 ? 8 : 4);
        return this.decodeFrom(r);
    },
    keyHash(s: Greeting): Uint8Array {
        return new Uint8Array(16);
    },
};
