crates/idl-ts/tests/snapshots/snapshot_xcdr2_vectors__snapshot_v5_seq_int32_final.snap
---
source: crates/idl-ts/tests/snapshot_xcdr2_vectors.rs
expression: "gen_ts(\"@final struct Bag { sequence<long> ids; };\")"
---
// Generated by zerodds idl-ts. Do not edit.

import type {
    DdsTypeDescriptor,
} from "@zerodds/types";
import {
    registerType,
} from "@zerodds/types";
import type {
    DdsTopicType, EndianMode,
} from "@zerodds/cdr";
import {
    Xcdr2Writer, Xcdr2Reader,
} from "@zerodds/cdr";

export interface Bag {
    ids: Array<number>;
}

export function isBag(v: unknown): v is Bag {
    if (typeof v !== "object" || v === null) return false;
    return true;
}

export const BagType: DdsTypeDescriptor<Bag> = {
    kind: "struct",
    name: "Bag",
    extensibility: "final",
    nested: false,
    fields: [
        {
            name: "ids",
            id: 0,
            type: { kind: "sequence", element: { kind: "primitive", name: "int32" } },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
    ],
    typeGuard: isBag,
};
registerType(BagType);

export const BagTypeSupport: DdsTopicType<Bag> = {
    typeName: "Bag",
    isKeyed: false,
    extensibility: "final",
    encodeInto(w: Xcdr2Writer, s: Bag): void {
        w.writeUint32(s.ids.length);
        for (const _e0 of s.ids) {
            w.writeInt32(_e0);
        }
    },
    encode(s: Bag, endian: EndianMode = "le", representation = 1): Uint8Array {
        const w = new Xcdr2Writer(endian, representation === 0 ? 8 : 4);
        this.encodeInto(w, s);
        return w.toBytes();
    },
    decodeFrom(r: Xcdr2Reader): Bag {
        const _f_ids: Array<number> = ((): Array<number> => { const _n = r.readUint32(); const _o: Array<number> = []; for (let _i = 0; _i < _n; _i++) { _o.push(r.readInt32()); } return _o; })();
        return {
            ids: _f_ids,
        };
    },
    decode(bytes: Uint8Array, offset = 0, length: number = bytes.length - offset, endian: EndianMode = "le", representation = 1): Bag {
        const r = new Xcdr2Reader(bytes, offset, length, endian, representation === 0 ? 8 : 4);
        return this.decodeFrom(r);
    },
    keyHash(s: Bag): Uint8Array {
        return new Uint8Array(16);
    },
};
