crates/idl-ts/tests/snapshots/snapshot_xcdr2_vectors__snapshot_v6_seq_string_final.snap
---
source: crates/idl-ts/tests/snapshot_xcdr2_vectors.rs
expression: "gen_ts(\"@final struct Tags { sequence<string> tags; };\")"
---
// Generated by zerodds idl-ts. Do not edit.

import type {
    Char, WChar, LongDouble,
    DdsAny, DdsException,
    DdsTypeDescriptor, DdsMemberDescriptor, DdsTypeRef,
    ServiceDescriptor, OperationDescriptor,
    OperationParameterDescriptor, AttributeDescriptor, ParameterMode,
} from "@zerodds/types";
import {
    registerType, makeChar, makeWChar, makeLongDouble,
} from "@zerodds/types";
import type {
    DdsTopicType, EndianMode,
} from "@zerodds/cdr";
import {
    Xcdr2Writer, Xcdr2Reader, md5,
} from "@zerodds/cdr";

export interface Tags {
    tags: Array<string>;
}

export function isTags(v: unknown): v is Tags {
    if (typeof v !== "object" || v === null) return false;
    const o = v as Record<string, unknown>;
    return true;
}

export const TagsType: DdsTypeDescriptor<Tags> = {
    kind: "struct",
    name: "Tags",
    extensibility: "final",
    nested: false,
    fields: [
        {
            name: "tags",
            id: 0,
            type: { kind: "sequence", element: { kind: "string", wide: false } },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
    ],
    typeGuard: isTags,
};
registerType(TagsType);

export const TagsTypeSupport: DdsTopicType<Tags> = {
    typeName: "Tags",
    isKeyed: false,
    extensibility: "final",
    encode(s: Tags, endian: EndianMode = "le"): Uint8Array {
        const w = new Xcdr2Writer(endian);
        w.writeUint32(s.tags.length);
        for (const _e of s.tags) {
            w.writeString(_e);
        }
        return w.toBytes();
    },
    decode(bytes: Uint8Array, offset = 0, length: number = bytes.length - offset): Tags {
        const r = new Xcdr2Reader(bytes, offset, length, "le");
        const _f_tags: Array<string> = ((): Array<string> => { const _n = r.readUint32(); const _o: Array<string> = []; for (let _i = 0; _i < _n; _i++) { _o.push(r.readString()); } return _o; })();
        return {
            tags: _f_tags,
        };
    },
    keyHash(s: Tags): Uint8Array {
        return new Uint8Array(16);
    },
};
