crates/idl-ts/tests/snapshots/snapshot_xcdr2_vectors__snapshot_v7_nested_modules_final.snap
---
source: crates/idl-ts/tests/snapshot_xcdr2_vectors.rs
expression: "gen_ts(\"module Outer { module Inner { @final struct S { long x; }; }; };\")"
---
// Generated by zerodds idl-ts. Do not edit.

import type {
    Char, WChar, LongDouble,
    DdsAny, DdsException,
    DdsTypeDescriptor, DdsMemberDescriptor, DdsTypeRef,
    ServiceDescriptor, OperationDescriptor,
    OperationParameterDescriptor, AttributeDescriptor, ParameterMode,
} from "@zerodds/types";
import {
    registerType, makeChar, makeWChar, makeLongDouble,
} from "@zerodds/types";
import type {
    DdsTopicType, EndianMode,
} from "@zerodds/cdr";
import {
    Xcdr2Writer, Xcdr2Reader, md5,
} from "@zerodds/cdr";

export namespace Outer {
export namespace Inner {
export interface S {
    x: number;
}

export function isS(v: unknown): v is S {
    if (typeof v !== "object" || v === null) return false;
    const o = v as Record<string, unknown>;
    if (typeof o.x !== "number") return false;
    return true;
}

export const SType: DdsTypeDescriptor<S> = {
    kind: "struct",
    name: "S",
    extensibility: "final",
    nested: false,
    fields: [
        {
            name: "x",
            id: 0,
            type: { kind: "primitive", name: "int32" },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
    ],
    typeGuard: isS,
};
registerType(SType);

export const STypeSupport: DdsTopicType<S> = {
    typeName: "Outer::Inner::S",
    isKeyed: false,
    extensibility: "final",
    encodeInto(w: Xcdr2Writer, s: S): void {
        w.writeInt32(s.x);
    },
    encode(s: S, endian: EndianMode = "le", representation = 1): Uint8Array {
        const w = new Xcdr2Writer(endian, representation === 0 ? 8 : 4);
        this.encodeInto(w, s);
        return w.toBytes();
    },
    decodeFrom(r: Xcdr2Reader): S {
        const _f_x: number = r.readInt32();
        return {
            x: _f_x,
        };
    },
    decode(bytes: Uint8Array, offset = 0, length: number = bytes.length - offset, endian: EndianMode = "le", representation = 1): S {
        const r = new Xcdr2Reader(bytes, offset, length, endian, representation === 0 ? 8 : 4);
        return this.decodeFrom(r);
    },
    keyHash(s: S): Uint8Array {
        return new Uint8Array(16);
    },
};

}

}
