crates/idl-ts/tests/snapshots/snapshot_xcdr2_vectors__snapshot_v8_keyed_final.snap
---
source: crates/idl-ts/tests/snapshot_xcdr2_vectors.rs
expression: "gen_ts(\"@final struct Sensor { @key long id; double value; };\")"
---
// Generated by zerodds idl-ts. Do not edit.

import type {
    Char, WChar, LongDouble,
    DdsAny, DdsException,
    DdsTypeDescriptor, DdsMemberDescriptor, DdsTypeRef,
    ServiceDescriptor, OperationDescriptor,
    OperationParameterDescriptor, AttributeDescriptor, ParameterMode,
} from "@zerodds/types";
import {
    registerType, makeChar, makeWChar, makeLongDouble,
} from "@zerodds/types";
import type {
    DdsTopicType, EndianMode,
} from "@zerodds/cdr";
import {
    Xcdr2Writer, Xcdr2Reader, md5,
} from "@zerodds/cdr";

export interface Sensor {
    /**
     * @dds-key
     */
    id: number;
    value: number;
}

export function isSensor(v: unknown): v is Sensor {
    if (typeof v !== "object" || v === null) return false;
    const o = v as Record<string, unknown>;
    if (typeof o.id !== "number") return false;
    if (typeof o.value !== "number") return false;
    return true;
}

export const SensorType: DdsTypeDescriptor<Sensor> = {
    kind: "struct",
    name: "Sensor",
    extensibility: "final",
    nested: false,
    fields: [
        {
            name: "id",
            id: 0,
            type: { kind: "primitive", name: "int32" },
            key: true,
            optional: false,
            mustUnderstand: false,
        },
        {
            name: "value",
            id: 1,
            type: { kind: "primitive", name: "double" },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
    ],
    typeGuard: isSensor,
};
registerType(SensorType);

export const SensorTypeSupport: DdsTopicType<Sensor> = {
    typeName: "Sensor",
    isKeyed: true,
    extensibility: "final",
    encodeInto(w: Xcdr2Writer, s: Sensor): void {
        w.writeInt32(s.id);
        w.writeFloat64(s.value);
    },
    encode(s: Sensor, endian: EndianMode = "le", representation = 1): Uint8Array {
        const w = new Xcdr2Writer(endian, representation === 0 ? 8 : 4);
        this.encodeInto(w, s);
        return w.toBytes();
    },
    decodeFrom(r: Xcdr2Reader): Sensor {
        const _f_id: number = r.readInt32();
        const _f_value: number = r.readFloat64();
        return {
            id: _f_id,
            value: _f_value,
        };
    },
    decode(bytes: Uint8Array, offset = 0, length: number = bytes.length - offset, endian: EndianMode = "le", representation = 1): Sensor {
        const r = new Xcdr2Reader(bytes, offset, length, endian, representation === 0 ? 8 : 4);
        return this.decodeFrom(r);
    },
    keyHash(s: Sensor): Uint8Array {
        const w = new Xcdr2Writer("be");
        w.writeInt32(s.id);
        const __holder = w.toBytes();
        if (__holder.length <= 16) {
            const __h = new Uint8Array(16);
            __h.set(__holder);
            return __h;
        }
        return md5(__holder);
    },
};
