crates/idl-ts/tests/snapshots/snapshot_xcdr2_vectors__snapshot_v9_appendable.snap
---
source: crates/idl-ts/tests/snapshot_xcdr2_vectors.rs
expression: "gen_ts(\"@appendable struct V { long a; long b; };\")"
---
// Generated by zerodds idl-ts. Do not edit.

import type {
    Char, WChar, LongDouble,
    DdsAny, DdsException,
    DdsTypeDescriptor, DdsMemberDescriptor, DdsTypeRef,
    ServiceDescriptor, OperationDescriptor,
    OperationParameterDescriptor, AttributeDescriptor, ParameterMode,
} from "@zerodds/types";
import {
    registerType, makeChar, makeWChar, makeLongDouble,
} from "@zerodds/types";
import type {
    DdsTopicType, EndianMode,
} from "@zerodds/cdr";
import {
    Xcdr2Writer, Xcdr2Reader, md5,
} from "@zerodds/cdr";

export interface V {
    a: number;
    b: number;
}

export function isV(v: unknown): v is V {
    if (typeof v !== "object" || v === null) return false;
    const o = v as Record<string, unknown>;
    if (typeof o.a !== "number") return false;
    if (typeof o.b !== "number") return false;
    return true;
}

export const VType: DdsTypeDescriptor<V> = {
    kind: "struct",
    name: "V",
    extensibility: "appendable",
    nested: false,
    fields: [
        {
            name: "a",
            id: 0,
            type: { kind: "primitive", name: "int32" },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
        {
            name: "b",
            id: 1,
            type: { kind: "primitive", name: "int32" },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
    ],
    typeGuard: isV,
};
registerType(VType);

export const VTypeSupport: DdsTopicType<V> = {
    typeName: "V",
    isKeyed: false,
    extensibility: "appendable",
    encode(s: V, endian: EndianMode = "le"): Uint8Array {
        const w = new Xcdr2Writer(endian);
        const _tok = w.beginAppendable();
        w.writeInt32(s.a);
        w.writeInt32(s.b);
        w.endAppendable(_tok);
        return w.toBytes();
    },
    decode(bytes: Uint8Array, offset = 0, length: number = bytes.length - offset): V {
        const r = new Xcdr2Reader(bytes, offset, length, "le");
        const _tok = r.beginAppendable();
        const _f_a: number = r.readInt32();
        const _f_b: number = r.readInt32();
        r.endAppendable(_tok);
        return {
            a: _f_a,
            b: _f_b,
        };
    },
    keyHash(s: V): Uint8Array {
        return new Uint8Array(16);
    },
};
